--- a/css/style2.css
+++ b/css/style2.css
@@ -219,13 +219,47 @@ svg  {
 .video video {
    height: 30%;
    width: 70%;
-   margin: 20px 250px 40px;
+   margin: 20px 240px 40px;
    padding: 70px;
    background-color: #FFD93D;
    border: 2px solid #4F200D;
    border-radius: 110px;
 }
 
+#history-box-1 {
+   font-size: 20px;
+   width: 400px;
+   margin: 100px;
+   padding: 70px;
+   border: 5px solid #FFD93D;
+   border-radius: 20px;
+   line-height: 50px;
+}
+
+#history-box-2 {
+   font-size: 16px;
+   width: 900px;
+   padding: 50px;
+   border: 5px solid #FFD93D;
+   border-radius: 20px;
+   line-height: 40px;
+   word-spacing: 1px;
+   letter-spacing: 0.5px;
+   position: absolute;
+   top: 850px;
+   right: 100px;
+}
+
+#history-box-3 {
+   font-size: 16px;
+   width: 900px;
+   padding: 50px;
+   border: 5px solid #FFD93D;
+   border-radius: 20px;
+   position: absolute;
+   top: 1300px;
+   right: 100px;
+}
 
 
 Franchise-Now h4 {
