--- a/css/style2.css
+++ b/css/style2.css
@@ -238,12 +238,13 @@ svg  {
 
 #history-box-2 {
    font-size: 16px;
+   font-family: Inter;
+   line-height: 40px;
+   word-spacing: 1px;
    width: 900px;
    padding: 50px;
    border: 5px solid #FFD93D;
    border-radius: 20px;
-   line-height: 40px;
-   word-spacing: 1px;
    letter-spacing: 0.5px;
    position: absolute;
    top: 850px;
@@ -252,26 +253,30 @@ svg  {
 
 #history-box-3 {
    font-size: 16px;
+   font-family: Inter;
+   line-height: 40px;
+   word-spacing: 1px;
    width: 900px;
    padding: 50px;
    border: 5px solid #FFD93D;
    border-radius: 20px;
    position: absolute;
-   top: 1300px;
+   top: 1250px;
    right: 100px;
 }
 
 
-Franchise-Now h4 {
+.Franchise-Now h4 {
    color: #FF1607;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #000;
    text-align: center;
-   font-size: 96px;
+   font-size: 60px;
    font-family: Inter;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
+   padding: 30px;
 }
 
 /* Franchise changes ends here*/
