--- a/css/style2.css
+++ b/css/style2.css
@@ -276,7 +276,132 @@ svg  {
    font-style: normal;
    font-weight: 700;
    line-height: normal;
+   margin: 50px;
    padding: 30px;
+}
+
+.follow {
+   font-family: Inter;
+   font-style: normal;
+   padding: 180px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.franchise {
+   font-family: Inter;
+   font-style: normal;
+   padding: 150px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1510px;
+   left: 370px;
+}
+
+.food-panda {
+   font-family: Inter;
+   font-style: normal;
+   padding: 200px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1510px;
+   left: 740px;
+}
+
+.sales {
+   font-family: Inter;
+   font-style: normal;
+   padding: 200px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1510px;
+   left: 1110px;
+}
+
+.products {
+   font-family: Inter;
+   font-style: normal;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1810px;
+   left: 20px;
+}
+
+.fastest {
+   font-family: Inter;
+   font-style: normal;
+   padding: 180px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px; 
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1810px;
+   left: 390px;
+}
+
+.Legit {
+   font-family: Inter;
+   font-style: normal;
+   padding: 200px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1810px;
+   left: 760px;
+}
+
+.TOFIL {
+   font-family: Inter;
+   font-style: normal;
+   padding: 200px 30px 0px;
+   height: 250px;
+   width: 350px;
+   margin: 50px;
+   border-radius: 20px;
+   border: 2px solid #4F200D;
+   background: #FFD93D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   position: absolute;
+   top: 1810px;
+   right: 10px;
 }
 
 /* Franchise changes ends here*/
