--- a/css/style2.css
+++ b/css/style2.css
@@ -283,26 +283,35 @@ svg  {
 .follow {
    font-family: Inter;
    font-style: normal;
-   padding: 180px 30px 0px;
+   padding: 130px 50px 110px;
    height: 250px;
    width: 350px;
    margin: 50px;
-   border-radius: 20px;
+   border-radius: 200px;
    border: 2px solid #4F200D;
    background: #FFD93D;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.follow img {
+   position: absolute;
+   height: 70px;
+   width: 100px;
+   top: 1620px;
+   left: 180px;
+}
+
 .franchise {
+   color: white;
    font-family: Inter;
    font-style: normal;
-   padding: 150px 30px 0px;
+   padding: 80px;
    height: 250px;
    width: 350px;
    margin: 50px;
-   border-radius: 20px;
+   border-radius: 200px;
    border: 2px solid #4F200D;
-   background: #FFD93D;
+   background: #FF8400;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    position: absolute;
    top: 1510px;
