--- a/css/style2.css
+++ b/css/style2.css
@@ -12,12 +12,7 @@
    --red:rgb(155 8 8);
    --white:#ffff;
 }
-.headeropen{
-   width: 400px!important;
-}
-.creamy{
-   margin-top: 30px;
-}
+
 .second ul  {
    list-style-type: none;
    margin: 10;
@@ -222,13 +217,13 @@ svg  {
 
 /* Franchise changes stars here*/
 .video video {
-   height: 30%;
-   width: 70%;
-   margin: 20px 240px 40px;
-   padding: 70px;
+   height: 650px;
+   width: 1300px;
+   padding: 50px 10px 50px;
+   margin: 50px 150px 50px;
    background-color: #FFD93D;
    border: 2px solid #4F200D;
-   border-radius: 110px;
+   border-radius: 20px;
 }
 
 #history-box-1 {
@@ -251,7 +246,7 @@ svg  {
    word-spacing: 1px;
    letter-spacing: 0.5px;
    position: absolute;
-   top: 850px;
+   top: 900px;
    right: 100px;
 }
 
@@ -267,20 +262,71 @@ svg  {
 }
 
 .Franchise-Now h4 {
-   color: #FF1607;
+   color: red;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #000;
    text-align: center;
    font-size: 96px;
-   font-size: 60px;
    font-family: Inter;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    padding: 30px;
+   margin-top: 70px;
 }
 
-.follow {
+.franchise-grid {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+
+.franchise-grid h3 {
+   font-size: 10px;
+   font-family: Inter;
+   font-style: normal;
+   padding: 80px 20px 80px;   
+   height: 200px;
+   width: 300px;
+   border-radius: 200px;
+   border: 2px solid #4F200D;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+#follow, #food-panda, #fastest, #tofil {
+   background: #FFD93D;
+}
+
+#products, #franchise, #sales, #legit {
+   color: white;
+   background-color: #FF8400;
+}
+
+.franchise-packages {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+}
+
+.franchise-packages h3 {
+   color: red;
+   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: #000;
+   font-size: 60px;
+   font-family: Inter;
+   font-style: normal;
+   font-weight: 700;
+}
+
+.franchise-packages {
+   display: flex;
+   flex-direction: column;
+}
+
+.franchise-packages img {
+   height: 500px;
+   width: 500px;
+}
+
+/* .follow {
    font-family: Inter;
    font-style: normal;
    padding: 130px 50px 110px;
@@ -292,15 +338,6 @@ svg  {
    background: #FFD93D;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
-.follow img {
-   position: absolute;
-   height: 70px;
-   width: 100px;
-   top: 1620px;
-   left: 180px;
-}
-
 
 .franchise {
    color: white;
@@ -412,7 +449,7 @@ svg  {
    position: absolute;
    top: 1810px;
    right: 10px;
-}
+} */
 
 
 /* Franchise changes ends here*/
@@ -1263,7 +1300,6 @@ p {
 /*---------------- footer starts here -----------------*/
 footer.footer{
    height: 100%;
-   width: 105%;
    color:black;
    background-color: #FFD93D;
    position: relative;
@@ -1520,21 +1556,12 @@ section{
    border-bottom: var(--border);
    background-color: white;
 }
-.flex{
-   display: flex;
-   flex-direction:row;
-   justify-content:center;
-   align-items:center;
-   
-   margin-left: 150px!important;
-}
+
 .header .flex{
    display: flex;
-   align-items: flex-end;
+   align-items: center;
    justify-content: space-between;
    position: relative;
-
-   width: 100%;
 }
 
 .header .flex .logo{
@@ -1893,100 +1920,6 @@ section{
    margin-top: 0;
 }
 
-.products {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   padding: 1rem;
- }
- 
- .products .box-container {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   gap: 1.5rem;
- }
- 
- .products .box {
-   border: var(--border);
-   padding: 1.5rem;
-   background-color: beige;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
-   width: 300px;
- }
- 
- .products .box img {
-   max-width: 100%;
-   height: auto;
- }
- 
- .products .name {
-   font-size: 1.2rem;
-   font-weight: bold;
- }
- 
- .products .flex {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   margin-top: 1rem;
-   
- }
- 
- .products .price {
-   font-size: 1rem;
-   color: var(--red);
- }
- 
- .products .qty {
-   width: 50px;
-   text-align: center;
- }
- 
- .products .sub-total {
-   font-size: 1rem;
-   margin-top: 1rem;
- }
- 
- .products .cart-total {
-   font-size: 1.2rem;
-   font-weight: bold;
-   margin-top: 1rem;
- }
- 
- .products .cart-total span {
-   color: var(--red);
- }
- 
- .products .more-btn {
-   display: flex;
-   justify-content: space-between;
-   margin-top: 1rem;
- }
- 
- .products .delete-btn,
- .products .btn {
-   padding: 0.5rem 1rem;
-   border: none;
-   border-radius: 4px;
-   cursor: pointer;
- }
- 
- .products .delete-btn {
-   background-color: var(--red);
-   color: var(--white);
- }
- 
- .products .btn {
-   background-color: var(--green);
-   color: var(--white);
- }
- 
- .products .disabled {
-   pointer-events: none;
-   opacity: 0.5;
- }
- 
 .about .row{
    display: flex;
    align-items: center;
@@ -2447,7 +2380,6 @@ h3 {
    justify-content: center;
 }
 
-
 .loader img{
    width: 35rem;
 }
@@ -2456,18 +2388,15 @@ h3 {
    /* babyruth 1 */
 position:relative;
 width: 324px;
-height: 300px;
+ height: 300px;
 background-image: url(../images/babyruth.jpg);
 border: 5px solid #FF8400;
 box-shadow: 0px 10px 4px 10px rgba(0, 0, 0, 0.25);
 border-radius: 25px;
 display: inline-flex;
 background-repeat: round;
-/* right: 62px;
-    left: 15px; */
-    margin: 0px 20px 0px 20px ;
-    /* top right bottom left */
-
+right: 62px;
+    left: 20px;
 }
 .event{
    /* event */
@@ -2480,14 +2409,13 @@ box-shadow: 0px 10px 4px 10px rgba(0, 0, 0, 0.25);
 border-radius: 25px;
 display: inline-flex;
 background-repeat: round;
-margin: 0px 20px 0px 20px ;
-/* right: 62px;
-    left: 51px; */
+right: 62px;
+    left: 51px;
 }
 .series{
    /* series */
 position:relative;
-width: 350px;
+width: 400px;
  height: 300px;
 background-image: url(../images/cheescakeseries.jpg);
 border: 5px solid #FF8400;
@@ -2495,9 +2423,8 @@ box-shadow: 0px 10px 4px 10px rgba(0, 0, 0, 0.25);
 border-radius: 25px;
 display: inline-flex;
 background-repeat: round;
-margin: 0px 20px 0px 20px ;
-/* right: 62px;
-    left: 80px; */
+right: 62px;
+    left: 80px;
 }
 .button11{
   
@@ -2616,28 +2543,7 @@ border: 1px solid #000000;
 
 
 /* media queries  */
-@media (max-width:1150px){
-   .flex{
-      
-       margin-left: 20px!important;
-   }
-   .none {
-      display: none;
-   }
-   .event {
-      width: 260px;
-      height: 350px;
-      top:20px;}
-   .series{
-      width: 250px;
-       height: 237px;
-      top:38px;
-   }
-   .babyruth{
-      width: 250px;
-      height: 309px;
-   }
-}
+
 @media (max-width:991px) {
    
    html{
@@ -2648,38 +2554,8 @@ border: 1px solid #000000;
    }
 }
 
-@media (max-width:850px){
+@media (max-width:768px){
 
-   .flex{
-      display: flex;
-      flex-direction:column;
-      justify-content:center;
-      align-items:center;
-      width: 100%;
-      margin-left: 0px!important;
-   }
-   .babyruth{
- margin-left: 50px!important;
- width: 40vh!important;
- margin-top: 100px;
-   }
-   .event {
-      width: 45vh;
-      height: 450px;
-      top:20px;
-      left: -2px;
-   }
-   .series{
-      width: 45vh!important;
-       height: 237px;
-      top:38px;
-      left: 0px;
-   }
- 
-   .headeropen{
-      width: 50% !important; ;
-      
-   }
    .contact-child.child1{
       width: 199px;
    }
@@ -2795,30 +2671,17 @@ a.button13{
    display:none;
 }
 .event {
-   width: 40vh;
-   height: 350px;
-   top:20px;
-   left: 6px;
-
-   right: 0px!important;
-
-}
+   width: 229px;
+   height: 309px;
+   top:20px;}
 .series{
-   width: 40vh!important;
+   width: 239px;
     height: 237px;
-   top:48px!important;
-   left:8px;
-   right: 0px;
-
+   top:38px;
 }
 .babyruth{
-   width: 40vh!important;
+   width: 259px;
    height: 309px;
-   /* margin-left:20px ; */
-   left: -10px;
-   right: 0px;
-   /* top right bottom left */
-
 }
 
 
