--- a/css/style2.css
+++ b/css/style2.css
@@ -215,7 +215,7 @@ svg  {
    font-size: 1.5rem;
 }
 
-/* Franchise changes stars here*/
+/* Franchise changes by SHAMS stars here*/
 .video video {
    height: 650px;
    width: 1300px;
@@ -301,158 +301,13 @@ svg  {
    background-color: #FF8400;
 }
 
-.franchise-packages {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-}
-
-.franchise-packages h3 {
-   color: red;
-   -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: #000;
-   font-size: 60px;
-   font-family: Inter;
-   font-style: normal;
-   font-weight: 700;
-}
-
-.franchise-packages {
-   display: flex;
-   flex-direction: column;
-}
-
 .franchise-packages img {
+   border-radius: 50px;  /* added */
    height: 500px;
    width: 500px;
 }
 
-/* .follow {
-   font-family: Inter;
-   font-style: normal;
-   padding: 130px 50px 110px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 200px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.franchise {
-   color: white;
-   font-family: Inter;
-   font-style: normal;
-   padding: 80px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 200px;
-   border: 2px solid #4F200D;
-   background: #FF8400;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1510px;
-   left: 370px;
-}
-
-.food-panda {
-   font-family: Inter;
-   font-style: normal;
-   padding: 200px 30px 0px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1510px;
-   left: 740px;
-}
-
-.sales {
-   font-family: Inter;
-   font-style: normal;
-   padding: 200px 30px 0px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1510px;
-   left: 1110px;
-}
-
-.products {
-   font-family: Inter;
-   font-style: normal;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1810px;
-   left: 20px;
-}
-
-.fastest {
-   font-family: Inter;
-   font-style: normal;
-   padding: 180px 30px 0px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px; 
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1810px;
-   left: 390px;
-}
-
-.Legit {
-   font-family: Inter;
-   font-style: normal;
-   padding: 200px 30px 0px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1810px;
-   left: 760px;
-}
-
-.TOFIL {
-   font-family: Inter;
-   font-style: normal;
-   padding: 200px 30px 0px;
-   height: 250px;
-   width: 350px;
-   margin: 50px;
-   border-radius: 20px;
-   border: 2px solid #4F200D;
-   background: #FFD93D;
-   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-   position: absolute;
-   top: 1810px;
-   right: 10px;
-} */
-
-
-/* Franchise changes ends here*/
+/* Franchise changes by SHAMS ends here*/
 
 .grid {
    display: grid;
